frontend/src/app/dashboard/components/widget-loader/widget-loader.component.scss
/* DBOARD-CONTEMT COMPONENT */
// TODO: Describe how this is setup & why there are two mixins (at a minimum)

@mixin widget-loader-component-base() {
    .widget-loader {
        display: flex;
        flex: 1 1 auto;

        .mat-card {
            padding: initial;
        }

        .mat-card-header .mat-card-header-text {
            display: none;
        }

        // .mat-card-header.panel-heading
        .panel-heading {
            display: inline-block;
            position: relative;
            width: 100%;
            top: 0;
            cursor: move;

            .panel-title {
                display: inline-block;
                padding: 2px;
                margin-left: auto;
                margin-right: auto;
            }
        }

        .mat-toolbar,
        .mat-toolbar-row {
            font-size: 12px;
            height: 28px;
            min-height: 28px !important;
        }

        .mat-toolbar {
            -webkit-transition: background 500ms;
            transition: background 500ms;
        }

        .mat-toolbar-row {
            //@include mat-elevation(1);
            padding: initial;
        }

        .mat-icon-button {
            &,
            .mat-icon {
                width: 28px;
                height: 28px;
            }

            &,
            .mat-button-wrapper {
                line-height: 28px;
            }

            .mat-icon {
                font-size: 18px;
                line-height: 24px;
            }
        }



        // .mat-card-content.panel-body
        .panel-body {
            overflow: hidden;
            // padding: 0 10px 10px;
            position: absolute;
            top: 28px;
            bottom: 0;
            left: 0;
            right: 0;
            display: flex;
        }


    }

    // CDK items are outside of the component namespace class
    .widget-menu,
    .widget-submenu {

        .mat-menu-item {
            font-size: 12px;
            height: 36px;
            line-height: 36px;

            .mat-icon {
                font-size: 16px;
                width: 16px;
                height: 16px;
            }
        }

        .menu-seperator {
            display: block;
            height: 1px;
            width: 100%;
            margin: 8px auto;
        }
    }
}

@mixin widget-loader-component-theme($theme-config) {

    /* Theme config parts */
    $primary: map-get($theme-config, primary);
    $accent: map-get($theme-config, accent);
    $warn: map-get($theme-config, warn);
    $foreground: map-get($theme-config, foreground);
    $background: map-get($theme-config, background);
    $is-dark-theme: map-get($theme-config, is-dark);

    .widget-loader {
        .mat-card {
            box-shadow: none;
            background-color: map-get($background, card);

            .mat-card-header {
                background-color: transparent;

                & {
                    @include transition(background-color 0.2s ease-in-out);
                }

                .panel-title {
                    padding: 0 10px;
                }

                .mat-toolbar {
                    @include transition(none);
                    background: transparent;

                    .mat-icon-button {
                        @include opacity(.5);
                    }
                }

                &:hover {
                    //background-color: rgba(map-get($accent, A700), .1);
                    background-color: map-get($background, card-header-hover);

                    .mat-toolbar {
                        .mat-icon-button {
                            @include opacity(1);
                        }
                    }
                }
            }
        }
    }

    // Gridster
    .gridster-item.is-dragging {
        .gridster-item-inner {
            .widget-loader {
                .mat-card-header {
                    background-color: map-get($background, card-header-hover);

                    .mat-toolbar {
                        .mat-icon-button {
                            @include opacity(1);
                        }
                    }
                }
            }
        }
    }


    // CDK items are outside of the component namespace class - be sure to give them a unique class name
    .widget-menu,
    .widget-submenu {
        .menu-seperator {
            background-color: rgba(map-get($foreground, divider), .1);
        }
    }

}

